[package]
name = "rage-rpf"
version = "0.1.0"
edition = "2021"
description = "RAGE Package File (RPF) archive parser and decryptor for GTA V and related titles"
license = "MIT"
repository = "https://github.com/VIRUXE/rage-rpf"
keywords = ["gta", "rage", "rpf", "gta5", "fivem"]
categories = ["parsing", "game-development"]

[dependencies]
anyhow = "1.0"
flate2 = "1.0"
aes = "0.8"
cipher = "0.4"
sha1 = "0.10"
