[package]
name = "rpf-archive"
version = "0.7.0"
edition = "2021"
description = "Rockstar Package File (RPF) archive library — read and write RPF0–RPF8, IMG1, IMG2, and IMG3 across GTA, RDR, and related titles"
license = "MIT"
repository = "https://github.com/VIRUXE/rpf-rs"
keywords = ["rpf", "gta", "rdr", "rockstar", "archive"]
categories = ["parsing", "game-development"]

[dependencies]
anyhow = "1.0"
flate2 = "1.0"
aes = "0.8"
cipher = "0.4"
sha1 = "0.10"
ruzstd = "0.8"
lzxd = "0.2"
